--- a/demo/rotate.html
+++ b/demo/rotate.html
@@ -4,7 +4,7 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <title>强制横屏布局</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
     <style>
         body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
             margin: 0;
@@ -16,12 +16,10 @@
         }
 
         .items {
+            padding: 10px 20px;
             list-style: none;
-            /*width: 100%px;*/
-            height: 160px;
-            /*overflow: hidden;*/
+            height: 96px;
             overflow-x: scroll;
-            overflow-y: scroll;
             white-space: nowrap; /* ul中的内容不换行 */
         }
 
@@ -29,8 +27,6 @@
             width: 80px;
             height: 80px;
             border: 1px solid blue;
-            margin-top: 10px;
-            margin-left: 20px;
             display: inline-block;
         }
     </style>
@@ -57,7 +53,6 @@
         <li>项目16</li>
         <li>项目17</li>
         <li>项目18</li>
-        <!--<br/>-->
         <li>项目21</li>
         <li>项目22</li>
         <li>项目23</li>
@@ -101,61 +96,6 @@
     if ("onorientationchange" in window) {
         window.addEventListener('orientationchange', resetFn, false);
     }
-
-
-    var handler = function (e) {
-        var src = e.target;
-
-        // the first element that triggers this function becomes the active one, until it's done
-        if (!activeScroller) activeScroller = src.id;
-        else if (activeScroller != src.id) return;
-
-        /*
-        var $b = $("#bottom");
-        var $t = $("#top");
-
-        var scrollH = $("#bottom-content").height() - $b.height();
-        var scrollW = $("#top-content").width() - $t.width();
-
-        var scrollPct = 0;
-
-        if (src.id == "top") {
-            if (scrollW > 0) {
-                scrollPct = $t.scrollLeft() / scrollW;
-            }
-
-            $b.scrollTop(scrollH * scrollPct);
-        } else {
-            if (scrollH > 0) {
-                scrollPct = $b.scrollTop() / scrollH;
-            }
-
-            $t.scrollLeft(scrollW * scrollPct);
-        }
-        */
-        var $e = $(this);
-
-        var scrollHeight = $e[0].scrollHeight;
-        var scrollMaxTop = scrollHeight - $e.height();
-        console.log("scrollMaxTop", scrollMaxTop);
-
-        var scrollWidth = $e[0].scrollWidth;
-        var scrollMaxLeft = scrollWidth - $e.width();
-        console.log("scrollMaxLeft", scrollMaxLeft);
-
-//        console.log("scrollHeight", scrollHeight);
-//        console.log("$e.scrollTop()", $e.scrollTop());
-
-//        $e.scrollTop(scrollMaxTop * (scrollMaxLeft / $e.scrollLeft()));
-//        $e.scrollLeft(scrollMaxLeft * (scrollMaxTop / $e.scrollTop()));
-
-        // give all animations a chance to finish
-        setTimeout(function () {
-            activeScroller = "";
-        }, 100);
-    };
-    var activeScroller = "";
-    $(".items").on("scroll", handler);
 
 </script>
 </body>
